# web-hw-14

./: main.py  pyproject.toml
src/: schemas.py
src/conf/: config.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: .env
